# etd

./: .gitignore  .travis.yml  MANIFEST.in  README.md  admin.py  email.py  forms.py  manage.py  models.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_client.py  test_email.py  test_forms.py  test_models.py  test_views.py  test_widgets.py  urls_app.py  views.py  widgets.py
.github/workflows/: tests.yml
config/: passenger_wsgi.py  urls.py
config/settings/: base.py  local.py  production.py  staging.py  test.py  unit_tests.py
etd_app/: admin.py  email.py  forms.py  ingestion.py  models.py  mods_mapper.py  one_offs.py  urls_app.py  utilities.py  views.py  widgets.py
etd_app/migrations/: 0001_initial.py  0002_person_bannerid.py  0003_auto_20160606_1914.py  0004_auto_20160615_1720.py  0005_degree_degree_type.py  0006_auto_20160718_1356.py  0006_candidate.py  0007_auto_20160804_1434.py  0008_auto_20180103_1959.py  0009_auto_20160225_1647.py  0009_auto_20180419_1516.py  0010_candidate_private_access_end_date.py  0011_auto_20160226_1617.py  0011_auto_20200212_1900.py  0012_department_bdr_collection_pid.py  0015_auto_20160307_1505.py  0018_auto_20160307_2112.py  0022_auto_20160309_1904.py  0025_auto_20160309_2136.py  0026_auto_20160314_1338.py  0027_auto_20160314_1422.py  0028_auto_20160314_1432.py  0029_auto_20160502_1819.py  0030_auto_20160516_1913.py  0031_auto_20160516_1922.py
migrations/: 0001_initial.py  0002_department_year.py  0003_auto_20160216_2006.py  0004_degree.py  0005_auto_20160216_2023.py  0007_committeemember.py  0008_keyword_language_thesis.py  0010_auto_20160225_2120.py  0012_candidate_embargo_end_year.py  0013_auto_20160303_2131.py  0013_auto_20160304_1856.py  0014_auto_20160304_1429.py  0014_auto_20160304_1822.py  0014_auto_20160304_2119.py  0016_auto_20160307_1517.py  0017_thesis_date_submitted.py  0019_auto_20160308_1956.py  0019_auto_20160309_1433.py  0020_auto_20160308_2015.py  0020_auto_20160309_1842.py  0021_auto_20160308_2132.py  0021_auto_20160309_1851.py  0023_candidate_committee_members.py  0024_auto_20160309_2043.py
requirements/: base.in  base.txt  local.in  local.txt  mysqlclient-1.4.4-cp36-cp36m-linux_x86_64.whl  mysqlclient-2.0.3-cp38-cp38-linux_x86_64.whl  production.in  production.txt  staging.in  staging.txt  unit_tests.txt
templates/etd_app/: candidate.html  candidate_committee.html  candidate_metadata.html  candidate_upload.html  faq.html  (+9 more)
test_files/: test_obj
tests/: requirements_ci.txt  responses_data.py  test_admin.py  test_client.py  test_email.py  test_ingestion.py  test_models.py  test_settings.py  test_urlconf.py  test_views.py  test_widgets.py
(+24 files in other folders)
